Fixed warnings with newer gcc. Fixed compilation problem when using a local plinkio library.

--- a/src/programs/rocmdr_snp/CMakeLists.txt
+++ b/src/programs/rocmdr_snp/CMakeLists.txt
@@ -12,4 +12,4 @@ include_directories( ${LIBCSV_INCLUDE_DIR} )
 run_ggo( GGO_SRC rocmdr_snp.ggo )
 
 add_executable( rocmdr_snp rocmdr_snp.cpp plink/PlinkIo.cpp RestrictReader.cpp ${GGO_SRC} )
-target_link_libraries( rocmdr_snp librocmdr -lplinkio )
+target_link_libraries( rocmdr_snp librocmdr ${PLINKIO_LIBRARIES} )
